--- a/partials/locationdetails.hbs
+++ b/partials/locationdetails.hbs
@@ -65,7 +65,7 @@
     </div>
     <div class="w-full lg:w-[calc(100%_-_630px)] lg:pl-5">
         <iframe class="border-none"
-            src="https://maps.google.com/maps?q={{address.line2}},{{address.line1}},{{address.city}},{{address.region}} {{address.postalCode}},{{address.countryCode}}&en=uk&z=14&amp;output=embed"
+            src="https://maps.google.com/maps?q={{address.line2}},{{address.line1}},{{address.city}},{{address.region}} {{address.postalCode}},{{address.countryCode}}&en=nl&z=14&amp;output=embed"
             width="100%" height="450" loading="lazy"></iframe>
     </div>
 </div>
