--- a/partials/one_slider.hbs
+++ b/partials/one_slider.hbs
@@ -1,74 +1,14 @@
+ <h2 class="text-3xl font-bold mb-12 text-center">{{c_title_lists.[8]}}</h2>
 <div class="sliderview owl-carousel px-5">
-  <div class="slide">
-    <img
-        src="{{photoGallery.[5].image.url}}"
-        class="block"
-        alt="..."
-      />
+  {{#each c_cetegory}}
+  <div class="slide ">
+        <img src="{{photos.[0].url}}" class="rounded-full mx-auto shadow-lg mb-4 " alt=""
+          style="max-width: 100px" />
+
+        <a href="{{cta.url}}" class="font-bold mb-2 ml-12">{{cta.label}}</a>
   </div>
-  <div class="slide">
-    <img
-        src="{{photoGallery.[6].image.url}}"
-        class="block"
-        alt="..."
-      />
-  </div>
-  <div class="slide">
-    <img
-        src="{{photoGallery.[7].image.url}}"
-        class="block"
-        alt="..."
-      />
-  </div>
-  <div class="slide">
-    <img
-        src="{{photoGallery.[8].image.url}}"
-        class="block"
-        alt="..."
-      />
-  </div>
-  <div class="slide">
-    <img
-        src="{{photoGallery.[4].image.url}}"
-        class="block"
-        alt="..."
-      />
-  </div>
-  <div class="slide">
-    <img
-        src="{{photoGallery.[5].image.url}}"
-        class="block"
-        alt="..."
-      />
-  </div>
-  <div class="slide">
-    <img
-        src="{{photoGallery.[6].image.url}}"
-        class="block"
-        alt="..."
-      />
-  </div>
-  <div class="slide">
-    <img
-        src="{{photoGallery.[7].image.url}}"
-        class="block"
-        alt="..."
-      />
-  </div>
-  <div class="slide">
-    <img
-        src="{{photoGallery.[8].image.url}}"
-        class="block"
-        alt="..."
-      />
-  </div>
-  <div class="slide">
-    <img
-        src="{{photoGallery.[4].image.url}}"
-        class="block"
-        alt="..."
-      />
-  </div>
+  {{/each}}
+  
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
